# 2BD

./: .gitignore  README.md  config.toml  pyproject.toml
src/adapters/: kaggle.py  polars_engine.py  storage.py  toml_config.py
src/domain/: __init__.py  models.py  ports.py
src/services/: __init__.py  ingestion.py  querying.py
src/services/nfl/: __init__.py  api.py  schema.py  transforms.py
