[project]
name = "bdb"
version = "0.1.0"
description = "Pull and query NFL Big Data Bowl data."
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.6.17",
    "polars>=1.0.0",
]

[project.optional-dependencies]
notebook = ["jupyter", "ipykernel"]

[project.scripts]
bdb = "src.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]
